@@ -9,6 +9,7 @@ Changes:
 - Add CPU microcode update feature option.
 - Add handling instructions for smartmontools for unkown USB mass storage devices.
 - Add syslog.conf configuration page.
+- Display zfs snapshot creation date using system date format
 - Upgrade e2fsprogs to 1.43.5.
 - Upgrade lcdproc to 0.5.9.
 - Upgrade nano to 2.8.7.
